safari collapsed header issue fixed

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     padding: 24px 0;
+    min-height: 43px;
 }
 
 .navlink {  
